added devise gem for user authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,38 @@
             <a class="nav-link" href="#">Link</a>
           </li>
         </ul>
+
+        <ul class="navbar-nav">
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+            </li>  
+          <% end %>
+        </ul>
       </div>
     </nav>
+
+
+    <% if notice.present? %>
+    <p class="alert alert-info alert-dismissible fade show"><%= notice %><button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button></p>
+    
+    <% end %>
+    <% if alert.present? %>
+    <p class="alert alert-danger alert-dismissible fade show"><%= alert %><button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button></p>
+    
+    <% end %>
+
 
     <%= yield %>
   </body>
