added badge for the price and administer button only visible to instructor who created the course if currently logged in so they can see what they created. used row class to keep cost and description next to each other

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -6,9 +6,7 @@
 
   <% @courses.each do |course| %>
     <h2 class="text-center">
-      <% if course.title.present? %>
-        <%= course.title %></h2>
-      <% end %>
+      <%= link_to course.title, course_path(course) %>
     <br />
     <div class="row">
       <div class="col-sm-8 col-12">
@@ -17,7 +15,7 @@
         <% end %>
       </div>
       <div class="col-sm-4 col-12 text-center">
-        <%=link_to 'Button', '#', class: 'btn btn-primary btn-large' %>
+        <%=link_to 'Tell Me More...', course_path(course), class: 'btn btn-primary btn-large' %>
       </div>
     </div>
     <br class="clr" />
