--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,10 +1,21 @@
 <br />
 
-<div class="booyah-box col-10 offset">
-  <h1 class="text-center">
-    <% if @course.title.present? %>
-    <%= @course.title %></h1>
-    <% end %>
+<div class="booyah-box col-10 offset-1">
+  <h1 class="text-center"><%= @course.title %></h1>
+    <br />
+    <%= link_to 'Preview As Student', course_path(@course), class: 'btn btn-warning float-right' %>
+    <br class="clr">
 
-</div>
+  <div class="text-center">
+    <%= link_to 'Add a new section', new_instructor_course_section_path(@course), class: 'btn btn-primary btn-lg' %>
+  </div>
+
+    <ul>
+      <% @course.sections.each do |section| %>
+        <li>
+          <%= section.title %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
   
