--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,21 +1,27 @@
 <br />
 
 <div class="booyah-box col-10 offset-1">
-  <h1 class="text-center">Learn something today</h1>
+  <h1 class="text-center">Learn Something Today</h1>
   <hr />
 
   <% @courses.each do |course| %>
     <h2 class="text-center">
       <%= link_to course.title, course_path(course) %>
     <br />
+    <br />
+    <%= image_tag course.image.url, class: 'img-fluid' %>
+    
     <div class="row">
       <div class="col-sm-8 col-12">
+        <br />
         <% if course.description.present? %>
           <%= course.description %>
         <% end %>
       </div>
       <div class="col-sm-4 col-12 text-center">
+        <br />
         <%=link_to 'Tell Me More...', course_path(course), class: 'btn btn-primary btn-large' %>
+
       </div>
     </div>
     <br class="clr" />
