--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,12 +1,13 @@
 <br />
 
-  <div class="booyah-box col-10 offset">
+  <div class="booyah-box col-10 offset-1">
     <h1 class="text-center">
       <% if @course.title.present? %>
       <%= @course.title %></h1>
     <% end %>
     <br />
-
+    <%= image_tag @course.image.url, class: 'img-fluid' %>
+    <br /><br />
     <div class="row">
       <div class="col-sm-4 col-12 text-center">
         <span class="badge badge-pill badge-default">
@@ -31,8 +32,10 @@
           <%= section.title %>
           <% section.lessons.each do |lesson| %>
             <div class="lesson">
-              <b><%= lesson.title %></b>-
-              <%= lesson.subtitle %>
+              <%= link_to lesson_path(lesson) do %>
+                <b><%= lesson.title %></b>-
+                <%= lesson.subtitle %>
+              <% end %>
             </div>
           <% end %>
         </div>
