--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <style>@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
   </style>
+    <link href="http://vjs.zencdn.net/5.12.6/video-js.css" rel="stylesheet">
   </head>
 
   <body>
@@ -60,6 +61,7 @@
 
 
     <%= yield %>
+    
   </div>
 
   <div id="footer">
@@ -69,5 +71,8 @@
       <%= link_to 'Teach a Course', new_instructor_course_path %>
     </div>
   </div>
-</body>
+
+  <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
+  <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+  </body>
 </html>
