--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,9 +69,43 @@
 
   <div id="footer">
     <div class="container">
-      <b>Teachers</b>
-      <br />
-      <%= link_to 'Teach a Course', new_instructor_course_path %>
+      <div class="row">
+        <div class="col 12 col-sm-3">
+          <b>Teachers</b>
+          <br />
+          <%= link_to 'Teach a Course', new_instructor_course_path %>
+          <br />
+          <%= link_to 'My Dashboard', dashboard_path %>
+        </div>
+        <div class="col-12 col-sm-3">
+          <b>About</b>
+          <br />
+          <%= link_to 'Team', '#' %>
+          <br />
+          <%= link_to 'Careers', '#' %>
+          <br />
+          <%= link_to 'Privacy Policy', '#' %>
+        </div>
+        <div class="col-12 col-sm-3">
+          <b>Contact</b>
+          <br />
+          lonier4@gmail.com
+          <br />
+          123 Prickly Cactus Rd
+          <br />
+          Austin TX, 78321
+        </div>
+        <div class="col-12 col-sm-3 social">
+          <b>Social</b>
+          <br />
+          <br />
+          <%= link_to 'http://github.com/lonier4' do %>
+            <span class="fa fa-github-square fa-2x social-button"></span>
+          <% end %>
+          <br />
+          <span class="fa fa-twitter-square fa-2x social-button"></span>
+        </div>
+      </div>
     </div>
   </div>
 
