--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -9,7 +9,7 @@
   <% if current_lesson.next_lesson.present? %>
     <%= link_to lesson_path(current_lesson.next_lesson), class: 'btn btn-default float-right' do %>
       Next Lesson &nbsp;
-      <span class="fa fa-forward"></span>
+      <span class="fa fa-arrow-circle-right"></span>
     <% end %>
   <% end %>
   
