final touches to static pages for for the footer

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -17,16 +17,19 @@ body {
   width: 100%;
   min-height: 100px;
   background-color: rgba(36, 32, 33, 0.9);
-  color: white;
+  color: #d9534f;
   font-family: "Helvetica Neue", Helvetica;
   padding: 10px 0px;
   margin-top: 30px;
   font-weight: 100;
+
 }
 
 #footer a {
-  color: white;
+  color: #d9534f;
   font-weight: 100;
+  
+  margin-right: 10px;
 }
 
 .social-button {
