--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,7 @@
 <br />
 
-<div class="booyah-box col-10 offset-1">
-  <h1>What I'm Learing</h1>
+<div class="booyah-box col-10 offset-1 text-center">
+  <h1 class>What I'm Learing</h1>
   <% current_user.enrolled_courses.each do |course| %>
     <h3 class="text-center">
       <%= link_to course.title, course_path(course) %>
@@ -9,9 +9,10 @@
     <br />
       <%= image_tag course.image.url, class: 'img-fluid' %>
     <br />
+    <br />
     <div class="row">
-      <div class="col-12 col-sm-8">
-        <%= course.description %>
+      <div class="col-12 col-sm-8 text-center">
+        <b class="description"><%= course.description %></b>
       </div>
       <div class="col-12 col-sm-4 text-center">
         <%= link_to "More Info...", course_path(course), class: 'btn btn-lg btn-primary' %>
@@ -31,9 +32,10 @@
       <br/>
         <%= image_tag course.image.url, class: 'img-fluid' %>
       <br />
+      <br />
       <div class="row">
-      <div class="col-12 col-sm-8">
-        <%= course.description %>
+      <div class="col-12 col-sm-8 text-center">
+        <b class="description"><%= course.description %></b>
       </div>
 
       <div class="col-12 col-sm-4 text-center">
